refactor, 统一换行符格式等